--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
   scoped_model: ^1.0.1
+  connectivity: ^0.4.3+1
   wifi: ^0.1.5
 
   # The following adds the Cupertino Icons font to your application.
